--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1> Weather Webapp</h1>
         <div class="searchbar">
-            <input type="text" id="city-in" placeholder="Enter City Name">
+            <input type="text" id="city-input" placeholder="Enter City Name">
             <button id="search-btn">Search</button>
         </div>
         <div class="weather-info" id="weather-info">
